@@ -14,10 +14,9 @@
 #define NO_BITS
 #endif
 
-#if defined __GNUC__
-  #if (__GNUC__ < 3)
-  //since this fails on GCC 2.95.4 on alpha and I don't know how to detect alpha...
-  #define NO_BITS
+#if defined (__GNUC__) && (__GNUC__ < 3)
+//since this fails on GCC 2.95.4 on alpha and I don't know how to detect alpha...
+#define NO_BITS
 #endif
 
 #ifndef NO_BITS
